force-app/main/default/objects/Solicitacao_transferencia_estoque__c/Solicitacao_transferencia_estoque__c.object-meta.xml
<CustomObject>
    <label>Solicitação de Transferência de Estoque</label>
    <nameField>
        <displayFormat>STE-{0000}</displayFormat>
        <label>Nº</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solicitações de Transferência de Estoque</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>