force-app/main/default/objects/Solicitacao_transferencia_estoque__c/fields/A_ao_interna__c.field-meta.xml
<CustomField>
    <fullName>A_ao_interna__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ação interna não permitida para mudar o status</description>
    <inlineHelpText>ação interna não permitida para mudar o status</inlineHelpText>
    <label>Açao interna</label>
    <type>Checkbox</type>
</CustomField>