force-app/main/default/objects/Solicitacao_transferencia_estoque__c/fields/Estoque_de_destino__c.field-meta.xml
<CustomField>
    <fullName>Estoque_de_destino__c</fullName>
    <label>Estoque de destino</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Estoques</valueSetName>
    </valueSet>
</CustomField>