force-app/main/default/objects/Solicitacao_transferencia_estoque__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Novo</fullName>
                <default>true</default>
                <label>Novo</label>
            </value>
            <value>
                <fullName>Em aprovação</fullName>
                <label>Ag. Aprovação</label>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Reprovado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Ativo</fullName>
            </value>
            <value>
                <fullName>Atendida</fullName>
            </value>
            <value>
                <fullName>Concluído</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>