force-app/main/default/objects/Solicitacao_transferencia_estoque__c/validationRules/Aprovacaodetrasferenciadeestoque.validationRule-meta.xml
<ValidationRule>
    <fullName>Aprovacaodetrasferenciadeestoque</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    A_ao_interna__c = FALSE,
    ISPICKVAL(Status__c, &quot;Aprovado&quot;)
)</errorConditionFormula>
    <errorMessage>&quot;O status não pode ser alterado para &apos;Aprovado&apos; enquanto o processo de aprovação não estiver concluído.&quot;</errorMessage>
</ValidationRule>